# app/modules/Courses/swagger.json
@@ -35,13 +35,22 @@
                 }
             }
         },
-        "/courses/getAllCategoryWise": {
-            "get": {
+        "/courses/getAllCourses": {
+            "post": {
                 "tags": [
                     "Courses Management"
                 ],
                 "description": "Get course",
                 "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Edit a course",
+                        "schema": {
+                            "$ref": "#/definitions/GetCourse"
+                        }
+                    },
+                    
                     {
                         "name": "Authorization",
                         "in": "header",
@@ -55,63 +64,45 @@
                 "responses": {
                     "200":{
                         "status": 1,
-                        "data": {
-                            "testbank": [
-                                {
-                                    "_id": "646dfbb0e1af91000856f054",
-                                    "updatedAt": "2023-05-24T11:57:36.998Z",
-                                    "createdAt": "2023-05-24T11:57:36.998Z",
-                                    "title": "1 full reading test",
-                                    "productId": "987654321",
-                                    "idpNumber": "123456987",
-                                    "picture": "https://cambridge-ielts-api-dev.devpress.net/images/7018c9.png",
-                                    "price": 50,
-                                    "__v": 0,
-                                    "isDeleted": false,
-                                    "status": true,
-                                    "updatedBy": null,
-                                    "createdBy": "646dd4c75990a22d874fc3b4",
-                                    "type": "paid",
-                                    "category": "testbank"
-                                }
-                            ],
-                            "writeAndImprove": [
-                                {
-                                    "_id": "646df241e1af91000856f03f",
-                                    "updatedAt": "2023-05-25T05:39:43.216Z",
-                                    "createdAt": "2023-05-24T11:17:21.608Z",
-                                    "title": "iielts",
-                                    "productId": "ABsCDsaf1s23s4",
-                                    "idpNumber": "IDPGOESHERE",
-                                    "picture": "IDPGOESHERE",
-                                    "price": 0,
-                                    "__v": 0,
-                                    "isDeleted": false,
-                                    "status": true,
-                                    "updatedBy": null,
-                                    "createdBy": "646dd4c75990a22d874fc3b4",
-                                    "type": "free",
-                                    "category": "writeAndImprove"
-                                },
-                                {
-                                    "_id": "646ef4ec46d9260d0bd89f10",
-                                    "updatedAt": "2023-05-25T05:41:00.296Z",
-                                    "createdAt": "2023-05-25T05:41:00.296Z",
-                                    "title": "iielts",
-                                    "productId": "ABsCDsafss1s23s4",
-                                    "idpNumber": "IDPGOESHERE",
-                                    "picture": "IDPGOESHERE",
-                                    "price": 0,
-                                    "__v": 0,
-                                    "isDeleted": false,
-                                    "status": true,
-                                    "updatedBy": null,
-                                    "createdBy": "646dd4c75990a22d874fc3b4",
-                                    "type": "free",
-                                    "category": "writeAndImprove"
-                                }
-                            ]
-                        },
+                        "description":"Success",
+                        "data": [
+                            {
+                                "_id": "646ef4ec46d9260d0bd89f10",
+                                "updatedAt": "2023-05-25T05:47:27.010Z",
+                                "createdAt": "2023-05-25T05:41:00.296Z",
+                                "title": "iielts",
+                                "productId": "ABsCDsafss1s23s4",
+                                "idpNumber": "IDPGOESHERE",
+                                "picture": "IDPGOESHERE",
+                                "price": 0,
+                                "__v": 0,
+                                "isDeleted": false,
+                                "status": true,
+                                "updatedBy": null,
+                                "createdBy": "646dd4c75990a22d874fc3b4",
+                                "type": "free",
+                                "moduleType": "listening",
+                                "category": "writeAndImprove"
+                            },
+                            {
+                                "_id": "646f08abbcceae000928d7e3",
+                                "updatedAt": "2023-05-25T07:13:27.462Z",
+                                "createdAt": "2023-05-25T07:05:15.187Z",
+                                "title": "1 full listening test",
+                                "productId": "98745612344",
+                                "idpNumber": "123456789",
+                                "picture": "https://cambridge-ielts-api-dev.devpress.net/images/6bb936.png",
+                                "price": null,
+                                "__v": 0,
+                                "isDeleted": false,
+                                "status": true,
+                                "updatedBy": null,
+                                "createdBy": "646dd4c75990a22d874fc3b4",
+                                "type": "free",
+                                "moduleType": "listening",
+                                "category": "testbank"
+                            }
+                        ],
                         "message": "SUCCESS"
                     }
                 }
@@ -273,17 +264,27 @@
     },
     "definitions": {
         "AddCourse": {
-            "required": [
+            "required": 
+            [   "description",
                 "title",
                 "productId",
                 "idpNumber",
                 "picture",
                 "category",
                 "price",
-                "type"
+                "type",
+                "moduleType"
             ],
             "properties": {
                 "title": {
+                    "example": "Title goes here",
+                    "image": "string"
+                },
+                "moduleType": {
+                    "example": "moduleType goes here",
+                    "image": "string"
+                },
+                "description": {
                     "example": "Title goes here",
                     "image": "string"
                 },
@@ -310,6 +311,22 @@
                 "type": {
                     "example": "free",
                     "image": "string"
+                }
+            }
+        },
+        "GetCourse": {
+            "required": [
+                "pageNumber",
+                "pageSize"
+            ],
+            "properties": {
+                "pageNumber": {
+                    "example": 1,
+                    "image": "number"
+                },
+                "pageSize": {
+                    "example": 10,
+                    "image": "number"
                 }
             }
         },
